# AniYT

./: .gitignore  .golangci.yml  MANIFEST.in  README.md  _query.pyx  ani-yt.py  ani_yt.py  custom.conf  index.html  install.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  update.sh
aniyt/: aniyt-0.11.0-cp310-cp310-macosx_10_9_x86_64.whl  aniyt-0.11.0-cp310-cp310-macosx_11_0_arm64.whl  aniyt-0.11.0-cp310-cp310-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  aniyt-0.11.0-cp310-cp310-musllinux_1_2_x86_64.whl  aniyt-0.11.0-cp310-cp310-win_amd64.whl  aniyt-0.11.0-cp311-cp311-macosx_10_9_x86_64.whl  aniyt-0.11.0-cp311-cp311-macosx_11_0_arm64.whl  aniyt-0.11.0-cp311-cp311-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  aniyt-0.11.0-cp311-cp311-musllinux_1_2_x86_64.whl  aniyt-0.11.0-cp311-cp311-win_amd64.whl  aniyt-0.11.0-cp312-cp312-macosx_10_13_x86_64.whl  aniyt-0.11.0-cp312-cp312-macosx_11_0_arm64.whl  aniyt-0.11.0-cp312-cp312-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  aniyt-0.11.0-cp312-cp312-musllinux_1_2_x86_64.whl  aniyt-0.11.0-cp312-cp312-win_amd64.whl  aniyt-0.11.0-cp313-cp313-macosx_10_13_x86_64.whl  aniyt-0.11.0-cp313-cp313-macosx_11_0_arm64.whl  aniyt-0.11.0-cp313-cp313-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  aniyt-0.11.0-cp313-cp313-musllinux_1_2_x86_64.whl  aniyt-0.11.0-cp313-cp313-win_amd64.whl  aniyt-0.11.0-cp314-cp314-macosx_10_13_x86_64.whl  aniyt-0.11.0-cp314-cp314-macosx_11_0_arm64.whl  aniyt-0.11.0-cp314-cp314-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  aniyt-0.11.0-cp314-cp314-musllinux_1_2_x86_64.whl  aniyt-0.11.0-cp314-cp314-win_amd64.whl  aniyt-0.11.0-cp314-cp314t-macosx_10_13_x86_64.whl  aniyt-0.11.0-cp314-cp314t-macosx_11_0_arm64.whl  aniyt-0.11.0-cp314-cp314t-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  aniyt-0.11.0-cp314-cp314t-musllinux_1_2_x86_64.whl  aniyt-0.11.0-cp314-cp314t-win_amd64.whl  aniyt-0.11.0-cp38-cp38-macosx_10_9_x86_64.whl  aniyt-0.11.0-cp38-cp38-macosx_11_0_arm64.whl  aniyt-0.11.0-cp38-cp38-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  aniyt-0.11.0-cp38-cp38-musllinux_1_2_x86_64.whl  aniyt-0.11.0-cp38-cp38-win_amd64.whl  aniyt-0.11.0-cp39-cp39-macosx_10_9_x86_64.whl  (+918 more)
tools/: ci  (+14 more)
(+419 files in other folders)
