[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "AniYT"
version = "0.9.6"
description = "A cli tool to browse and watch videos in YouTube playlists. Specially designed for watching anime on YouTube."
authors = [
    { name = "CleveTok3125", email = "CleveTok3125@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp",
    "RapidFuzz",
    "ujson",
    "argparse",
    "requests" # Extension
]

[project.scripts]
ani-yt = "ani_yt.ani_yt:main"

[tool.setuptools.packages.find]
where = ["src"]
