[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "AniYT"
version = "0.13.3"
description = "A feauture rich cli tool to browse and watch videos in YouTube playlists. Specially designed for watching anime on YouTube."
authors = [
    { name = "CleveTok3125", email = "CleveTok3125@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = [
    "argparse",
    "RapidFuzz",
    "ujson",
    "yt-dlp",
    "wcwidth",
    "requests" # Extension
]

[project.scripts]
ani-yt = "ani_yt.ani_yt:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"bin" = ["bin/ani-tracker*"]
